--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <head>
+     <head>
+        <link rel="stylesheet" href="" />
+        <title>Prima prova Git</title>
+     </head>
+     <body>
+        <header>
             <h1>Hello World</h1>
-        </head>
+        </header>
+
+        <nav>
+
+        </nav>
+
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
